Fixed z-index of start button

--- a/src/features/button/StartButton.css
+++ b/src/features/button/StartButton.css
@@ -14,5 +14,4 @@
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
-  z-index: 1;
 }
